--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${project.parent.version}</version>
             </plugin>
         </plugins>
+        <finalName>java-spring-github-actions-cicd</finalName>
     </build>
 
 </project>
